# openserver

./: .gitignore  README.md  ToS.md  pyproject.toml
Assets/Templates/: SignInWarning.html  SignUpEmail.html
src/: tunnel.py
src/openserver/: __main__.py
src/openserver/Api/: AddContact.py  AddPhotoAlbum.py  CreateAlbum.py  CreateReminder.py  CreateReminderList.py  CreateRoom.py  CreateSubReminder.py  CurrentUserInfo.py  DeleteAlbum.py  DeletePhoto.py  DeleteReminder.py  DeleteRoom.py  EditContact.py  EditNote.py  EditReminder.py  GetFeed.py  GetFeedPost.py  GetMail.py  GetMessage.py  GetPhoto.py  GetReminders.py  GetThing.py  ListAlbums.py  ListChats.py  ListContacts.py  ListMailboxes.py  ListPhotos.py  ListPhotosAlbum.py  ListPhotosTrash.py  ListRooms.py  ListThings.py  Login.py  MoveMail.py  MovePhotoTrash.py  PullAppPreferences.py  PullLibraryData.py  PullNotes.py  PushAppPreferences.py  PushLibraryData.py  RegisterThing.py  (+18 more)
src/openserver/Helpers/: AppInfo.py  Communications.py  GetLogin.py  IdEntryValidation.py  Plus.py  Report.py
src/openserver/Lowend/: AddMailToServer.py  AddMessageToServer.py
src/openserverctl/: __main__.py  setup.py
