[project]
name = "openserver"
version = "1.1.0"
description = "Open Source TheProtocols Server"
readme = "README.md"
license = {text = "GPL-3.0"}
maintainers = [{name = "Çağan Mert İŞLEK", email = "islekcaganmert@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = ["cffi==1.17.0", "cryptography==43.0.0", "pycparser==2.22", "Flask==3.0.3", "blinker==1.8.2", "click==8.1.7", "itsdangerous==2.2.0", "Jinja2==3.1.4", "MarkupSafe==2.1.5", "Werkzeug==3.0.3", "PyJWT==2.9.0"]

[project.urls]
Donate = "https://www.buymeacoffee.com/islekcaganmert"
Documentation = "https://github.com/islekcaganmert/openserver/wiki"
Changes = "https://github.com/islekcaganmert/openserver/commits/main"
"Source Code" = "https://github.com/islekcaganmert/openserver"
"Issue Tracker" = "https://github.com/islekcaganmert/openserver/issues"
Chat = "https://lemmy.today/c/openserver"

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
openserverctl = "openserverctl:main"